replace old population saving method with batch save